--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -14,4 +14,4 @@ jobs:
       - name: run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.12.x
-          lhci collect --upload.target=temporary-public-storage --url=https://www.kada.lk --collect.staticDistDir=public || echo "Fail"
+          lhci collect --upload.target=temporary-public-storage --url=https://www.kada.lk || echo "Fail"
