--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -14,4 +14,4 @@ jobs:
       - name: run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.12.x
-          lhci collect --numberOfRuns=1 --url=https://kada.lk || echo "Fail"
+          lhci autorun --upload.target=temporary-public-storage --collect.numberOfRuns=1 --collect.url=https://kada.lk || echo "Fail"
