--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -15,4 +15,4 @@ jobs:
         run: |
           npm install -g @lhci/cli@0.12.x
           lhci healthcheck
-          lhci autorun || echo "Fail"
+          lhci autorun --config=.lighthouserc.json || echo "Fail"
