--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -7,6 +7,19 @@
     },
     "upload": {
       "target": "temporary-public-storage"
+    },
+    "assert": {
+      "preset": "lighthouse:no-pwa",
+      "assertions": {
+        "categories:performance": [
+          "warn",
+          { "aggregationMethod": "optimistic", "minScore": 0.7 }
+        ],
+        "categories:accessibility": [
+          "warn",
+          { "aggregationMethod": "optimistic", "minScore": 0.9 }
+        ]
+      }
     }
   }
 }
