--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -3,7 +3,10 @@
     "collect": {
       "method": "node",
       "numberOfRuns": 1,
-      "url": ["https://www.kada.lk/", "https://www.kada.lk/Service/"]
+      "url": ["https://www.kada.lk/", "https://www.kada.lk/Service/"],
+      "settings": {
+        "output": "lighthouse-report"
+      }
     },
     "upload": {
       "target": "temporary-public-storage"
