--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -5,7 +5,7 @@
       "numberOfRuns": 1,
       "url": ["https://www.kada.lk/", "https://www.kada.lk/Service/"],
       "settings": {
-        "output": "lighthouse-report"
+        "output": "report/lighthouse-report"
       }
     },
     "upload": {
