--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -9,7 +9,8 @@
       }
     },
     "upload": {
-      "target": "filesystem"
+      "target": "filesystem",
+      "outputDir": "report/lighthouse-report"
     }
   }
 }
