--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -9,7 +9,7 @@
       }
     },
     "upload": {
-      "target": "filesystem",
+      "target": ["filesystem", "temporary-public-storage"],
       "outputDir": "report/lighthouse-report"
     }
   }
