--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -3,7 +3,11 @@
     "collect": {
       "method": "node",
       "numberOfRuns": 1,
-      "url": ["https://www.kada.lk/", "https://www.kada.lk/Service/"],
+      "url": [
+        "https://www.kada.lk/",
+        "https://www.kada.lk/Service/",
+        "https://www.kada.lk/Privacy_Policy/"
+      ],
       "settings": {
         "output": "report/lighthouse-report"
       }
