--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -32,7 +32,7 @@ jobs:
       - name: List Lighthouse Report Contents
         run: ls -R report/lighthouse-report
 
-      - name: Archive Lighthouse Report
+      - name: Archive Lighthouse Reports
         uses: actions/upload-artifact@v2
         with:
           name: lighthouse-report
