--- a/.github/workflows/.lighthouserc.json
+++ b/.github/workflows/.lighthouserc.json
@@ -13,7 +13,7 @@
       }
     },
     "upload": {
-      "target": ["filesystem", "temporary-public-storage"],
+      "target": "filesystem",
       "outputDir": "report/lighthouse-report"
     }
   }
